--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
     margin: 50px;
     padding: 5px;
     background-color: linear-gradient(to right, #f0c3f68d, #bfcaf5);
-    background: #f0c3f68d; /* For browsers that don't support CSS3 */
-    background: -webkit-linear-gradient(left, #f0c3f68d, #bfcaf5); /* Safari 5.1 to 6.0 */
-    background: -moz-linear-gradient(right, #f0c3f68d, #bfcaf5); /* Firefox 3.6 to 15 */
-    background: -o-linear-gradient(right, #f0c3f68d, #bfcaf5); /* Opera 11.1 to 12.0 */
+    background: #f0c3f68d; 
+    background: -webkit-linear-gradient(left, #f0c3f68d, #bfcaf5); 
+    background: -moz-linear-gradient(right, #f0c3f68d, #bfcaf5); 
+    background: -o-linear-gradient(right, #f0c3f68d, #bfcaf5); 
     text-align: left;
 }
 
@@ -69,10 +69,10 @@ button {
     font: inherit;
     font-size: 15px;
     background: linear-gradient(to right, #6d41a7, #8a97f9);
-    background: #905fcc; /* For browsers that don't support CSS3 */
-    background: -webkit-linear-gradient(left, #6d41a7, #8a97f9); /* Safari 5.1 to 6.0 */
-    background: -moz-linear-gradient(right, #6d41a7, #8a97f9); /* Firefox 3.6 to 15 */
-    background: -o-linear-gradient(right, #6d41a7, #8a97f9); /* Opera 11.1 to 12.0 */
+    background: #905fcc;
+    background: -webkit-linear-gradient(left, #6d41a7, #8a97f9); 
+    background: -moz-linear-gradient(right, #6d41a7, #8a97f9); 
+    background: -o-linear-gradient(right, #6d41a7, #8a97f9); 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
     animation: customAni 2s linear 0s 1 normal none;
@@ -86,10 +86,10 @@ button:hover {
     border-color: #9d66e6;
     background-color: #3600b3;
     background: linear-gradient(to right, #571ca4, #4e63fd);
-    background: #905fcc; /* For browsers that don't support CSS3 */
-    background: -webkit-linear-gradient(left, #571ca4, #4e63fd); /* Safari 5.1 to 6.0 */
-    background: -moz-linear-gradient(right, #571ca4, #4e63fd); /* Firefox 3.6 to 15 */
-    background: -o-linear-gradient(right, #571ca4, #4e63fd); /* Opera 11.1 to 12.0 */
+    background: #905fcc; 
+    background: -webkit-linear-gradient(left, #571ca4, #4e63fd); 
+    background: -moz-linear-gradient(right, #571ca4, #4e63fd); 
+    background: -o-linear-gradient(right, #571ca4, #4e63fd); 
 }
 
 button:active {
@@ -104,10 +104,10 @@ button:active {
     cursor: pointer;
     font: inherit;
     background: linear-gradient(to right, #fd78c8, #fcc5e3);
-    background: #eb79df; /* For browsers that don't support CSS3 */
-    background: -webkit-linear-gradient(left, #fd78c8, #fcc5e3); /* Safari 5.1 to 6.0 */
-    background: -moz-linear-gradient(right, #fd78c8, #fcc5e3); /* Firefox 3.6 to 15 */
-    background: -o-linear-gradient(right, #fd78c8, #fcc5e3); /* Opera 11.1 to 12.0 */
+    background: #eb79df; 
+    background: -webkit-linear-gradient(left, #fd78c8, #fcc5e3); 
+    background: -moz-linear-gradient(right, #fd78c8, #fcc5e3);
+    background: -o-linear-gradient(right, #fd78c8, #fcc5e3); 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
 }
@@ -119,10 +119,10 @@ button:active {
     border-style: outset;
     border-color: #fe9df7;
     background: linear-gradient(to right, #f957b8, #f9a2d2);
-    background: #5018a8; /* For browsers that don't support CSS3 */
-    background: -webkit-linear-gradient(left, #f957b8, #f9a2d2); /* Safari 5.1 to 6.0 */
-    background: -moz-linear-gradient(right, #f957b8, #f9a2d2); /* Firefox 3.6 to 15 */
-    background: -o-linear-gradient(right, #f957b8, #f9a2d2); /* Opera 11.1 to 12.0 */
+    background: #5018a8; 
+    background: -webkit-linear-gradient(left, #f957b8, #f9a2d2); 
+    background: -moz-linear-gradient(right, #f957b8, #f9a2d2); 
+    background: -o-linear-gradient(right, #f957b8, #f9a2d2); 
 }
 
 .input-group input[type="text"] {
@@ -151,7 +151,6 @@ button:active {
     gap: 5px;
 }
 
-/* Copy this code after the above code */
 @keyframes customAni {
     0% {
       animation-timing-function: ease-in;
@@ -198,7 +197,6 @@ button:active {
     }
   }
   
-  /* Copy this code after the above code */
 @keyframes customAni2 {
     0%,
     100% {
@@ -228,7 +226,6 @@ button:active {
   }
 
   .update {
-    /* margin-bottom: 100px; */
     margin-top: 150px;
     padding: 10px;
     margin-right: 15px;
